fix timestamp tooltip overflow
Former-commit-id: c791d5aeec0d0f62bcc67594e46ff5d6e90b006b

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -43,7 +43,6 @@ body {
   padding-left: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
-  overflow: hidden;
 }
 
 .control.control {
